<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/mainBackgroundColor">

    <ScrollView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_1"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/edit_text_default"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="top|bottom"
            android:textIsSelectable="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonLeftBracket"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonLeftBracket"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/buttonRightBracket"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonRightBracket"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/buttonDegree"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonDegree"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonDelete"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button1"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>

        <Button android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button2"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/button3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button3"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/buttonAdd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonAdd"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_4"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button4"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/button5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button5"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/button6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button6"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/buttonSubtract"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonSubtract"
            android:layout_weight="1"
            style="@style/ButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_5"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMultiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/ll_5"
        >
        <Button
            android:id="@+id/buttonPoint"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonPoint"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/button0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button0"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/buttonEqual"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonEqual"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/buttonDivide"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/buttonDivide"
            style="@style/ButtonStyle"/>
    </LinearLayout>

</RelativeLayout>